Prepared for first test execution
All prepared for a first test execution. Only the most important entities have been created (Player, NPC, Rooms and Exits), and only one command is being parsed (look). First test is to see if the Ticks from Player and NPC work correctly and adjust its ticking speed. Next we must create a moving command in order to test the world.

--- a/LightAndDarkness/LightAndDarkness/LightAndDarkness.vcxproj
+++ b/LightAndDarkness/LightAndDarkness/LightAndDarkness.vcxproj
@@ -120,6 +120,7 @@
     <ClCompile Include="Globals.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="NPC.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Room.cpp" />
     <ClCompile Include="World.cpp" />
@@ -130,6 +131,7 @@
     <ClInclude Include="Exit.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="Item.h" />
+    <ClInclude Include="NPC.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Room.h" />
     <ClInclude Include="World.h" />
